added babel-cli, babel-jest, and babel-core packages

--- a/band_website/package.json
+++ b/band_website/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-jest": "^19.0.0",
     "jest-cli": "^19.0.2",
     "react-scripts": "0.9.5"
   },
