--- a/band_website/package.json
+++ b/band_website/package.json
@@ -10,6 +10,8 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "firebase": "^3.7.2",
+    "firebase-tools": "^3.5.0",
     "jquery": "^3.2.1",
     "materialize-css": "^0.98.0",
     "react": "^15.4.2",
