--- a/band_website/.gitignore
+++ b/band_website/.gitignore
@@ -8,6 +8,7 @@
 
 # production
 /build
+/Users/Tommy/gritty_digits/band_website/src/index.js
 
 # misc
 .DS_Store
@@ -15,4 +16,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
