--- a/band_website/package.json
+++ b/band_website/package.json
@@ -15,8 +15,7 @@
     "jquery": "^2.1.1",
     "materialize-css": "^0.98.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-images": "^0.5.2"
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
